# AquaGuard-RL

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  inference.py  inference_results.json  openenv.yaml  pyproject.toml  requirements.txt
scripts/: build_docker.sh  run_local.sh  run_sample_agent.py
server/: app.py
src/: __init__.py  client.py  constants.py  models.py
src/aquaguard_env/: __init__.py
src/server/: __init__.py  app.py  aquaguard_environment.py  reward.py
src/server/grader/: __init__.py  llm_grader.py  programmatic.py
src/server/simulation/: __init__.py  crop_growth.py  economic.py  groundwater.py  season.py
src/server/tasks/: __init__.py  task_definitions.py
src/server/utils/: __init__.py  description_builder.py
tests/: conftest.py  test_grader.py  test_models.py  test_reward.py  test_simulation.py
